# bluepost

./: CHANGELOG.md  README.md  bluepost.service  makefile  pyproject.toml
.github/: issue_template.md
.github/workflows/: ci.yml
bluepost/: cli.py  core.py
